fixing section project overflowing content

--- a/style.css
+++ b/style.css
@@ -498,12 +498,12 @@ body {
 .section-projects {
   display: none;
   width: 100%;
-  padding-bottom: 2rem;
 }
 
 .section-projects.active {
   display: block;
   background-color: var(--primary-clr-800);
+  padding-bottom: 6rem;
 }
 
 .projects__title {
@@ -527,15 +527,11 @@ body {
 .project__image-wrapper {
   display: block;
   cursor: pointer;
-  height: 200px;
+  max-height: 200px;
   overflow-y: hidden;
   transition: .5s;
   position: relative;
   border-left: 5px solid var(--accent-clr-400);
-}
-
-.project__image-wrapper:hover {
-  border-left-color: #000;
 }
 
 .project__image-wrapper > img {
@@ -577,7 +573,16 @@ button {
   background-position: left;
   border-radius: .35rem;
   border: none;
-  transition: background-position .4s;
+  animation: bg-animation 5s infinite alternate;
+}
+
+@keyframes bg-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
 
 .home-content__button:hover,
